--- a/main.html
+++ b/main.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-
-<html>
-  <head>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-
-  <body>
-    <!-- do not change this code -->
-    <h1>Quiz</h1>
-    <div id="questions"></div>
-    <button id="submit">Submit</button>
-    <div id="score"></div>
-
-    <script type="text/javascript" src="./script.js"></script>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Quiz</title>
+</head>
+<body>
+    <div id="quiz-container">
+        <!-- Quiz questions will be displayed here -->
+    </div>
+    <button onclick="submitQuiz()">Submit Quiz</button>
+    <div id="score-container"></div>
+    <div id="previous-score"></div> <!-- Display previous score if available -->
+    
+    <script src="quiz.js"></script>
+</body>
 </html>
